@@ -45,4 +45,8 @@ Note that the following bug and feature requests are logged in GForge with relat
 
  *[#1073] errors with JCE and shopping cart resolution after globus
  **Removed POM dependency on globus and refer to globus jar, explicitly specifying bouncycastle dependency and avoiding jce 1.3 reference
+ 
+ *[#1077] copy not supplying default storage resource
+ **DataTransferOperations.copy() method using absolute paths and resource strings was not propogating default resource that was the copy target
+ 
 ==Features==
